fix(lib): sort icons on Table overlapped next columns (buefy/buefy#3940)
- Fixes the issue that sort icons on Table overlapped or were clipped by
  next columns.

  Since sort icons were absolutely positioned and placed at the right
  side of the column label texts, the icons overlapped or were clipped
  by the right columns when columns were packed. This commit changes the
  anchor element for sort icons to `<div class="th-wrap">` elements that
  wrap the column label texts and absolutely places sort icons ON the
  right end of the `<div class="th-wrap">` elements instead. If the
  column `is-numeric`, the sort icon is placed on the left end of the
  `<div class="th-wrap">` element, otherwise the sort icon overlaps the
  column label text.

  Similar problems occurred when the `sort-multiple` option was turned
  on. Applying the above solution to the delete buttons of sort
  indicators did not work well. The delete buttons were torn apart from
  the sort icons since the sort icons aligned with the normal flow of
  the column label texts. I decided to group the sort icon, number, and
  delete button as `multi-sort-icons` so that they do not split.
  `multi-sort-icons` is placed in the normal flow of the column label
  texts and moves to the next line if the column is packed.

issues
- buefy/buefy#2886
- buefy/buefy#3034

--- a/packages/buefy-next/src/scss/components/_table.scss
+++ b/packages/buefy-next/src/scss/components/_table.scss
@@ -114,6 +114,8 @@ $table-sticky-header-height: 300px !default;
             font-weight: $weight-semibold;
             .th-wrap {
                 display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
                 align-items: center;
                 .icon {
                     margin-left: 0.5rem;
@@ -124,9 +126,11 @@ $table-sticky-header-height: 300px !default;
                     flex-direction: row-reverse;
                     text-align: right;
                     width: 95%;
-                    .icon {
+                    .sort-icon {
                         margin-left: 0;
                         margin-right: 0.5rem;
+                        left: 0;
+                        right: auto;
                     }
                 }
                 &.is-centered {
@@ -149,14 +153,18 @@ $table-sticky-header-height: 300px !default;
                     position: absolute;
                 }
             }
-            .sort-icon, .multi-sort-cancel-icon {
+            .sort-icon {
                 position: absolute;
                 bottom: 50%;
-                left: 100%;
+                right: 0;
                 transform: translateY(50%);
             }
-            .multi-sort-cancel-icon {
-                margin-left: 10px;
+            .multi-sort-icons {
+                display: flex;
+                align-items: center;
+                .multi-sort-cancel-icon {
+                    margin-left: 10px;
+                }
             }
             &.is-sticky {
                 position: -webkit-sticky;
